fixed stacking of avatars in channel header on firefox

--- a/src/app/main-page/message-board/message-board.component.scss
+++ b/src/app/main-page/message-board/message-board.component.scss
@@ -139,6 +139,8 @@
                 }
 
                 .user_from_channels_avatar {
+                    @include flex();
+
                     .avatar {
                         margin-right: -10px;
                     }
